syntax = "proto3";

package api.dw.v3;
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option go_package = "micros-api/api/dw/v3;dwV3";
option java_multiple_files = true;
option java_outer_classname = "DwV3";


service DwService {

  rpc GetUscIdByEnterpriseName(GetUscIdByEnterpriseNameReq) returns (GetUscIdByEnterpriseNameResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/ident"
    };
  } // 获取企业信用代码 done


  rpc GetEntRelations(GetDataBeforeTimePointReq) returns (EnterpriseRelationsResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/relations"
    };
  }

  rpc GetEnterpriseInfo(GetDataBeforeTimePointReq) returns (GetDataDictResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/info"
    };
  } // 工商信息 done

  rpc GetEntEquityTransparency(GetDataBeforeTimePointReq) returns (GetDataListResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/equity-transparency"
    };
  }  // 股权穿透 done

  rpc GetEntEquityTransparencyConclusion(GetDataBeforeTimePointReq) returns (GetDataDictResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/equity-transparency/conclusion"
    };
  }  // 股权穿透结论 done


  rpc GetEntShareholders(GetDataBeforeTimePointReq) returns (GetDataListResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/shareholders"
    };
  }  // 股东信息 done


  rpc GetEntInvestment(GetDataBeforeTimePointReq) returns (GetDataListResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/investments"
    };
  }   // 对外投资 done


  rpc GetEntBranches(GetDataBeforeTimePointReq) returns (GetDataListResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/branches"
    };
  }   // 分支机构 done

  rpc GetCaseRegistrationInfo(GetDataBeforeTimePointReq) returns (GetDataListResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/case-regis"
    };
  } // 立案信息 done

  rpc GetForeclosureDisposition(GetDataBeforeTimePointReq) returns (GetDataListResp)  {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/judiciary/foreclosure-disposition"
    };
  }  // 法拍信息 done

  rpc GetExecutive(GetDataBeforeTimePointReq) returns (GetDataListResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/judiciary/executive"
    };
  } // 强制执行 done

  rpc GetEquityFrozen(GetDataBeforeTimePointReq) returns (GetDataListResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/judiciary/equity-frozen"
    };
  }   // 资产冻结 done

  rpc GetHighConsumptionRestriction(GetDataBeforeTimePointReq) returns (GetDataListResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/judiciary/high-consumption-restriction"
    };
  } // law_status_consumption_restriction 高消费限制 done

  rpc GetCourtAnnouncement(GetDataBeforeTimePointReq) returns (GetDataListResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/judiciary/court-announcement"
    };
  } // law_records_cases 案件信息 done

  rpc GetEnterpriseManagerInfo(GetDataBeforeTimePointReq) returns (GetDataListResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/managers-info"
    };
  } // law_records_members 主要人员 done

  rpc GetDiscreditedDebtor(GetDataBeforeTimePointReq) returns (GetDataListResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/judiciary/discredited-debtor"
    };
  } // law_status_lose_credit done


  rpc GetEnterpriseCredential(GetDataBeforeTimePointReq) returns (GetDataListResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/credential"
    };
  }

  rpc GetEnterpriseRankingList(GetDataBeforeTimePointReq) returns (GetEntRankingListResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/ranking-list"
    };
  }

  rpc GetCollStat(GetCollStatReq) returns (GetCollStatResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/stat"
    };
  }

  rpc GetMacroEconomyData(GetMacroEconomyDataReq) returns (GetDataListResp) {
    option (google.api.http) = {
      get: "/micros/dw/v3/enterprise/macro-econ"
    };
  }

  //  rpc GetJudicialStatics(GetDataBeforeTimePointReq) returns (GetDataListResp) {} // temp desp
  //  rpc GetEnterpriseIndustry(GetDataBeforeTimePointReq) returns (GetDataListResp) {} //
  //  rpc GetEnterpriseProduct(GetDataBeforeTimePointReq) returns (GetDataListResp) {} //

  rpc InsertArtifactData(InsertArtifactDataReq) returns (InsertArtifactDataResp) {
    option (google.api.http) =  {
      post: "/micros/dw/v3/artifact-data"
      body: "*"
    };
  }

  rpc GetArtifactData(GetArtifactDataReq) returns (GetDataListResp) {
    option (google.api.http) =  {
      get: "/micros/dw/v3/artifact-data"
    };
  }

  rpc DeleteArtifactData(DeleteArtifactDataReq) returns (DeleteArtifactDataResp) {
    option (google.api.http) =  {
      post: "/micros/dw/v3/artifact-data/delete"
      body: "*"
    };
  }

}

message GetArtifactDataReq {
  ArtifactDataItem item = 1;
  int64 page_size = 2;
  int64 page_num = 3;
  string field_match = 4;
  string match_target = 5;
}

message DeleteArtifactDataReq {
  ArtifactDataItem item = 1;
  string coll_id = 2;
}

message InsertArtifactDataResp {
  bool success = 1;
  int32 code = 2;
  string msg = 3;
}

message DeleteArtifactDataResp {
  bool success = 1;
  int32 code = 2;
  string msg = 3;
}


message InsertArtifactDataReq {
  ArtifactDataItem item = 1;
  repeated google.protobuf.Struct data = 2;
}

enum ArtifactDataItem {
  ENTERPRISE_COMMENT = 0;
  PRODUCT_EVAL_RULE = 1;
}

message GetMacroEconomyDataReq {
  int64 page_size = 1;
  int64 page_num = 2;
  string item = 3;
  string sort_by = 4;
}


message GetCollStatReq {
  enum CollName {
      basic_status_branchlist = 0;
      basic_status_enterprise_info = 1;
      basic_status_equity_penetration = 2;
      basic_status_investments = 3;
      basic_status_members = 4;
      basic_status_shareholders = 5;
      develop_records_bd_detail = 6;
      develop_records_financing = 7;
      develop_records_honour_tags = 8;
      develop_records_ranking_tags = 9;
      law_records_cases = 10;
      law_records_execution = 11;
      law_records_his_execution = 12;
      law_records_new_cases = 13;
      law_status_consumption_restriction = 14;
      law_status_equity_freezes = 15;
      law_status_lose_credit = 16;
      law_status_sales = 17;
  }
  CollName coll_name = 1;
}

message GetCollStatResp {
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  google.protobuf.Struct data = 4;
}

message EnterpriseRelationsResp {
  message RelationsData {
    string enterprise_name = 1;
    repeated google.protobuf.Struct shareholder = 2;
    repeated google.protobuf.Struct investment = 3;
    repeated google.protobuf.Struct branch = 4;
    int32 total_shareholder = 5;
    int32 total_investment = 6;
    int32 total_branch = 7;
  }
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  RelationsData data = 4;

}



message GetDataDictResp {
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  google.protobuf.Struct data = 4;
  //  google.protobuf.Timestamp created_at = 4;
  //  google.protobuf.Timestamp updated_at = 5;
}

message GetDataListResp {
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  repeated google.protobuf.Struct data = 4;
  int32 total = 5;
  //  google.protobuf.Timestamp created_at = 5;
  //  google.protobuf.Timestamp updated_at = 6;
}

message GetDataWithDurationReq {
  string usc_id = 1;
  google.protobuf.Timestamp time_point = 2;
  int32 validate_extend_date = 3;
}

message GetDataBeforeTimePointReq {
  string usc_id = 1;
  google.protobuf.Timestamp time_point = 2;
  int64 page_size = 3;
  int64 page_num = 4;
}

message GetUscIdByEnterpriseNameReq {
  string enterprise_name = 1;
}

message GetUscIdByEnterpriseNameResp {
  message EntIdent {
    bool exists = 1;
    bool isLegal = 2;
    string usc_id = 3;
  }
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  EntIdent data = 4;
}

message GetEntRankingListResp {
  message EnterpriseRankingList {
    string usc_id = 1;
    int32 ranking_position = 2;
    string list_title = 3;
    string list_type = 4;
    string list_source = 5;
    int32 list_participants_total = 6;
    string list_published_date = 7;
    string list_url_qcc = 8;
    string list_url_origin = 9;
  }
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  repeated EnterpriseRankingList data = 4;
  int32 total = 5;
}
