syntax = "proto3";
package kratos.api;

option go_package = "graph-dw/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  message MongoDb {
    string uri = 1;
  }
  message Consul{
    string addr = 1;
    string token = 2;
  }
  message Tls {
    string folder_path = 1;
  }
  Database database = 1;
  Redis redis = 2;
  MongoDb mongoDb = 3;
  Consul consul = 4;
  Tls tls = 5;
}

//ca7dcb57e00d4724895fb1d2fa29985b085ba1504ee54ebbb23d5a14adac9da0
